# telegram-id-bot

./: .gitignore  Cargo.toml  README.md  build.sh  package.json  vercel.json
api/: health.js  health.rs  webhook.js  webhook.rs
api/health/: Cargo.toml  main.rs
api/webhook/: Cargo.toml
src/: main.rs
