[package]
name = "telegram-id"
version = "0.1.0"
edition = "2021"

[dependencies]
# For standalone version
teloxide = { version = "0.12", features = ["macros", "webhooks"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.5"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.4"

# For Vercel functions
vercel_runtime = { version = "2" }
reqwest = { version = "0.11", features = ["json"] }

# Vercel API functions
[[bin]]
name = "webhook"
path = "api/webhook.rs"

[[bin]]
name = "health"
path = "api/health.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
